--- a/index.html
+++ b/index.html
@@ -5,23 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
     <title>Floating Cards</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1 class="shadow">Meet Our Team</h1>
+    </header>
     <main>
-        <section class="txt-container">
-            <div>
-                <p></p>
+        <section>
+            <div class="txt-container">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta maxime consectetur possimus porro laboriosam quibusdam quasi hic tempore nemo earum voluptate dolore modi, optio fugit numquam harum. Qui, rem!
+                </p>
             </div>
         </section>
-        <section class="card-container">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <section class="float-card">
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/male1.png" alt="Foto di Marco Bianchi">
+                    <h5>MARCO BIANCHI</h5>
+                    <h6>Designer</h6>
+                    <span class="cyan">marcobianchi@team.com</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/female1.png" alt="Foto di Laura Rossi">
+                    <h5>LAURA ROSSI</h5>
+                    <h6>Front-end Developer</h6>
+                    <span class="cyan">laurarossi@team.com</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/male2.png" alt="Foto di Giorgio Verdi">
+                    <h5>GIORGIO VERDI</h5>
+                    <h6>Back-end Developer</h6>
+                    <span class="cyan">giorgioverdi@team.com</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/female2.png" alt="Foto di Marta Ipsum">
+                    <h5>MARTA IPSUM</h5>
+                    <h6>SEO Specialist</h6>
+                    <span class="cyan">martaipsum@team.com</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/male1.png" alt="Foto di Roberto Lorem">
+                    <h5>ROBERTO LOREM</h5>
+                    <h6>Project Manager</h6>
+                    <span class="cyan">robertolorem@team.com</span>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./img/male1.png" alt="Foto di Daniela Amet">
+                    <h5>DANIELA AMET</h5>
+                    <h6>Analyst</h6>
+                    <span class="cyan">danielaamet@team.com</span>
+                </div>
+            </div>
         </section>
     </main>
     
