--- a/index.html
+++ b/index.html
@@ -12,63 +12,88 @@
 </head>
 <body>
     <header>
-        <h1 class="shadow">Meet Our Team</h1>
+        <h1>Meet Our Team</h1>
     </header>
-    <main>
+    <main class="container">
         <section>
-            <div class="txt-container">
+            <div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dicta maxime consectetur possimus porro laboriosam quibusdam quasi hic tempore nemo earum voluptate dolore modi, optio fugit numquam harum. Qui, rem!
                 </p>
             </div>
         </section>
-        <section class="float-card">
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/male1.png" alt="Foto di Marco Bianchi">
-                    <h5>MARCO BIANCHI</h5>
-                    <h6>Designer</h6>
-                    <span class="cyan">marcobianchi@team.com</span>
+        <section >
+            <div class="col">                
+                <div class="card clearfix">
+                    <div>
+                        <img class="avatar" src="./img/male1.png" alt="Foto di Marco Bianchi">
+                    </div>
+                    <div class="contents">
+                        <h3 class="name">MARCO BIANCHI</h3>
+                        <h6 class="position">Designer</h6>
+                        <a>marcobianchi@team.com</a>
+                    </div>
                 </div>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/female1.png" alt="Foto di Laura Rossi">
-                    <h5>LAURA ROSSI</h5>
-                    <h6>Front-end Developer</h6>
-                    <span class="cyan">laurarossi@team.com</span>
+                <div class="col">
+                    <div class="card clearfix">
+                        <div>
+                            <img class="avatar" src="./img/female1.png" alt="Foto di Laura Rossi">
+                        </div>
+                        <div class="contents">
+                            <h3 class="name">LAURA ROSSI</h3>
+                            <h6 class="position">Front-end Developer</h6>
+                            <a>laurarossi@team.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/male2.png" alt="Foto di Giorgio Verdi">
-                    <h5>GIORGIO VERDI</h5>
-                    <h6>Back-end Developer</h6>
-                    <span class="cyan">giorgioverdi@team.com</span>
+                <div class="col">
+                    <div class="card clearfix">
+                        <div>
+                            <img class="avatar" src="./img/male2.png" alt="Foto di Giorgio Verdi">
+                        </div>
+                        <div class="contents">
+                            <h3 class="name">GIORGIO VERDI</h3>
+                            <h6 class="position">Back-end Developer</h6>
+                            <a>giorgioverdi@team.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/female2.png" alt="Foto di Marta Ipsum">
-                    <h5>MARTA IPSUM</h5>
-                    <h6>SEO Specialist</h6>
-                    <span class="cyan">martaipsum@team.com</span>
+                <div class="col">
+                    <div class="card clearfix">
+                        <div>
+                            <img class="avatar" src="./img/female2.png" alt="Foto di Marta Ipsum">
+                        </div>
+                        <div class="contents">
+                            <h3 class="name">MARTA IPSUM</h3>
+                            <h6 class="position">SEO Specialist</h6>
+                            <a>martaipsum@team.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/male1.png" alt="Foto di Roberto Lorem">
-                    <h5>ROBERTO LOREM</h5>
-                    <h6>Project Manager</h6>
-                    <span class="cyan">robertolorem@team.com</span>
+                <div class="col">
+                    <div class="card clearfix">
+                        <div>
+                            <img class="avatar" src="./img/male3.png" alt="Foto di Roberto Lorem">
+                        </div>
+                        <div class="contents">
+                            <h3 class="name">ROBERTO LOREM</h3>
+                            <h6 class="position">Project Manager</h6>
+                            <a>robertolorem@team.com</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-container">
-                <div class="card">
-                    <img src="./img/male1.png" alt="Foto di Daniela Amet">
-                    <h5>DANIELA AMET</h5>
-                    <h6>Analyst</h6>
-                    <span class="cyan">danielaamet@team.com</span>
+                <div class="col">
+                    <div class="card clearfix">
+                        <div>
+                            <img class="avatar" src="./img/female3.png" alt="Foto di Daniela Amet">
+                        </div>
+                        <div class="contents">   
+                            <h3 class="name">DANIELA AMET</h3>
+                            <h6 class="position">Analyst</h6>
+                            <a>danielaamet@team.com</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
